# awsbackup

./: .gitignore
gml/: .env.example  .gitignore  README.md  akhrotscontextmain.txt  pyproject.toml
gml/caddy/: Caddyfile
gml/config/: orchestration.toml
gml/deploy/: README.md  nginx.conf  systemd-gml-api.service  systemd-gml-mcp.service  vm-bootstrap.sh
gml/docs/: ARCHITECTURE.md  DATA_FLOW_AND_DEPLOYMENT.md  MCP_SETUP.md  api.md  gpu-setup.md  openapi-chatgpt.json
gml/mcp-relay/: .gitignore  README.md  pyproject.toml  relay_config.example.json
gml/mcp_relay/: __init__.py  __main__.py  app.py  auth.py  client.py  config.py  connector.py
gml/migrations/: 001_extensions.sql  002_users_and_keys.sql  003_memories.sql  004_byte_tracking.sql  005_row_level_security.sql  006_fts.sql  007_views.sql  008_aal_columns.sql  009_user_passwords.sql  010_is_latest.sql  011_parent_memory_id.sql  012_invite_codes.sql  013_bitemporal.sql  014_entity_resolution.sql  015_gate_decisions.sql  016_session_id.sql  019_conversations.sql  020_google_oauth.sql  021_user_activity.sql  022_admin_audit.sql  README.md  all_in_one.sql  apply_all.sh
gml/orchestration/: api_routes.py  api_routes.py.bak-20260601-104114  api_routes.py.bak-conv  api_routes.py.bak.1780055132  api_routes.py.bak.1780062625  api_routes.py.bak.1780682127  api_routes.py.bak.1780682771  api_routes.py.bak.1780730002  api_routes.py.bak.1780731114  api_routes.py.bak.1780741690  api_routes.py.prebak  cli.py  errors.py  graph_projection.py  mcp_proxy.py  mcp_server.py  runner.py  server.py  server.py.bak-console-20260616  server.py.bak-dash-20260616  server.py.bak-invite-20260616-070217  server.py.bak-invite2-20260616-071956  server.py.bak.1780746205  server.py.bak.1781068720  server.py.bak.1781087833  server.py.predeploy-20260605-113818  users.py
gml/scripts/: backfill_embeddings.py  backfill_entity_resolution.py  bench_speed.py  benchmark_locomo.py  benchmark_sam.py  demo_pipeline_trace.py  dev.py  eval_llm.py  eval_retrieval.py  finetune_answer_llm.py  finetune_cross_encoder.py  finetune_embedder.py  full_dryrun.py  gml_retrieval_audit.py  kaggle_finetune.py  kaggle_finetune_embedder.py  locomo_eval.py  mcp_demo.py  migrate_to_postgres.py  mine_hard_negatives.py  postgres_smoke_test.py  prepare_ft_data.py  prepare_ft_llm_data.py  resolve_merge_candidates.py  run_all_tiers.sh  run_ft_chain.sh  run_pipeline_demo.py  self_test.py  test_conversation.py  test_sdp.py  trace_pipeline.py  verify_embed_on_write.py
gml/tests/: conftest.py  test_answer_generator.py  test_api_routes.py  test_assembler.py  test_bm25_retriever.py  test_chunking_and_rrf.py  test_classifier.py  test_cli.py  test_clients.py  test_contracts.py  test_embedder.py  test_ensemble_reranker.py  test_entity_boosted_retriever.py  test_entity_synth.py  test_hybrid_retriever.py  test_ingestion.py  test_llm_reranker.py  test_me_keys.py  test_memory_store.py  test_multihop_aware.py  test_negation_aware.py  test_observability.py  test_pipeline.py  test_pipeline_iterative_retrieval.py  test_pipeline_skip_sam.py  test_query_decomposer.py  test_real_embedders.py  test_reranker.py  test_retriever.py  test_runner.py  test_sam.py  test_sam_aal_record.py  test_sam_turn_compressor.py  test_sdp_aal_tuples.py  test_sdp_date_extractor.py  test_sdp_date_resolver.py  (+8 more)
(+279 files in other folders)
