[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gml-orchestration"
version = "0.1.0"
description = "GML Core Orchestration Layer — context assembly for AI memory injection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "tiktoken",
    "google-genai",
    "jinja2",
    "fastapi",
    "uvicorn",
    "httpx",
    "anthropic",
    "openai",
    "tokenizers",
    "fastembed",
    "rank-bm25",
    "mcp",
    "asyncpg",
    "pgvector",
    "pyjwt",
]

classifiers = [
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
gml = "orchestration.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "freezegun",
]
# Fine-tuning extras. Install on the training machine only.
ft = [
    "torch>=2.1",
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    "peft>=0.10",
    "datasets>=2.18",
    "accelerate>=0.30",
    "trl>=0.8",
]
# CUDA-only quantization for QLoRA on 6-8 GB GPUs (RTX 4050/4060). Skip on Mac.
ft-cuda = [
    "bitsandbytes>=0.43",
]

[tool.hatch.build.targets.wheel]
packages = ["orchestration"]

# Bundle the Jinja templates into the wheel so the file-template loader in
# each translator adapter resolves after `pip install` — otherwise every
# render call silently falls back to the embedded template and emits a
# degraded-mode warning.
[tool.hatch.build.targets.wheel.force-include]
"orchestration/translator/templates" = "orchestration/translator/templates"

[tool.hatch.build.targets.sdist]
include = [
    "orchestration",
    "config",
    "tests",
    "scripts",
    "README.md",
    "pyproject.toml",
    ".env.example",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit external services (e.g. local Ollama). Run with `pytest -m integration`.",
]
addopts = "-m 'not integration'"
